# pywoe

./: .gitattributes  .gitignore  pyproject.toml  pytest.ini  sandbox.ipynb
src/pywoe/: __init__.py  pywoe.py
tests/: conftest.py  test_pywoe.py
tests/reference_data/: iris_fitted_p_0025.parquet  iris_fitted_p_005.parquet  iris_fitted_p_005_np.parquet  iris_fitted_p_005_np_1.parquet  splits_iris_p_005.pickle  woe_summary_iris_p_0025.parquet  woe_summary_iris_p_005.parquet  woe_summary_iris_p_005_np_1.parquet
